--- a/VRChat/16/1275516.html
+++ b/VRChat/16/1275516.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "LI6fAa0uZM8zLlZC17poDwLCwmapsJBddxGDvLaCrJQ="></script>
+    "OTa7NtucDuw2cAlfA55qKf3NjB+bcVYfmC2UwS/dLkI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"めんだこ帽子","description":"メンダコを模した帽子の3Dモデルです。\nVRChat使用を想定して作成しましたが、使用用途は自由です。\nお手数ですがunityに取り込んだ際、yを180°回転させてください。アクセサリとして使用する場合、その後に方向や大きさを自由に変えモデルに着用させてください。\n\n\n商用、非商用問わず利用可能です。みんなでメンダコを愛でましょう！\n\n\n内容物\nmendako.blender\nmendako.fbx\nmendako.png\nmendakouv.png\n\nポリゴン数 : 1048\nマテリアル数 : 1\n\n\n禁止事項：\n再配布、転売、自作発言\n","url":"https://booth.pm/ja/items/1275516","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/28423f44-bfab-4ac0-a997-58dd5bb502cb/i/1275516/dce91d0b-b0c7-419c-a7f8-b4c69fd2ec41_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LI6fAa0uZM8zLlZC17poDwLCwmapsJBddxGDvLaCrJQ="></script>
+    nonce="OTa7NtucDuw2cAlfA55qKf3NjB+bcVYfmC2UwS/dLkI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -472,9 +472,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
