--- a/VRChat/00/1275500.html
+++ b/VRChat/00/1275500.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "yYAo6fkIw2li/GtIqhDNTK0pF5BQKOCqsEj+yzl9qgY="></script>
+    "c87rnT7n7vmSnT1yxutIE7wnmkqKsqKKK92IB/EpNcI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け_指輪","description":"ＶＲＣ向けと書いてますが、基本ご自由にお使いください。改変や分解も自由です。\n\n※自作発言と再配布はおやめください。(再配布は一回かぎりでお願いします）\n\n△は１１６９０ポリゴンで少し多めです。改変なども自由なのでブレンダーなどでポリゴン数を減らすといいかもしれません。\n\nｆｂｘのファイルだけなのでテクスチャはありません。なのでマテリアルごとに分けています（画像２を参照）\n\n※画像はメタリックに見せるためにシェーダーを使っています。お好みのシェーダーを使いましょう。\n\n\n最近私の周りにカップルが多いのでリア充ばｋ・・・ではなく（）\nカップルがより仲良くなれるよう、指輪を作りました！\n\nとはいえカップル用じゃなくてもアクセサリーとしても指輪は使えますので是非！\n","url":"https://booth.pm/ja/items/1275500","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/521730e0-f768-4371-b0ec-397b8f2b0bb4/i/1275500/8244580b-e974-4a44-b0bb-a4a59e485c3a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yYAo6fkIw2li/GtIqhDNTK0pF5BQKOCqsEj+yzl9qgY="></script>
+    nonce="c87rnT7n7vmSnT1yxutIE7wnmkqKsqKKK92IB/EpNcI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -357,9 +357,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
