--- a/VRChat/98/1275198.html
+++ b/VRChat/98/1275198.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "hMsMcMcPtGWmgsRGJQRvqzIkJP2E7nDFtvDZH2s09sw="></script>
+    "a2WVvHoZd+22gF0+DRvg1jk4M0WElj53hjfyLW0Shi8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"DogBowl【UdonChips】","description":"餌皿がUdonChipsに対応！\n握ると所持金をチャージし、頭を当てると出金します。\nひっくり返すとチャージが全て消える機能付き。\nカジノワールドなどに置いておくと楽しいです。\n\n----------------------------------------------------\n過去に旧モデル版をご購入いただいていた方は無料でUdonChips版のアップデートをご利用いただけます。\n(おまけとして過去作のものもダウンロード可能です)","url":"https://booth.pm/ja/items/1275198","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/8eb7df68-18ab-47b3-995f-550289ccaf81/i/1275198/32a14208-a4ea-49a7-bb37-ce57a21b3833_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hMsMcMcPtGWmgsRGJQRvqzIkJP2E7nDFtvDZH2s09sw="></script>
+    nonce="a2WVvHoZd+22gF0+DRvg1jk4M0WElj53hjfyLW0Shi8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -488,9 +488,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
