--- a/VRChat/54/1255054.html
+++ b/VRChat/54/1255054.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "qC1jUgfUVjOREmxGCO6Ay1zpIyo0/yXWWGjOC9CF5Kg="></script>
+    "/xjJbYp2PD9jumd3UE+MO/xMqnDq2gKRhFzeMo3WE+I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『Lua』ver3.0","description":"【CAUTION!】 FullSet = Standard + Classic + Dedicated settings\n\n『Lua』（ルア）\nVRChatでの利用を想定したキャラクターモデルです。\nその他アプリケーション、ゲーム、動画配信等でもご利用いただけます。","url":"https://booth.pm/ja/items/1255054","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"3500","highPrice":"6000"},"image":"https://booth.pximg.net/c/620x620/eca89977-bf28-4ec6-9d85-8a57d9d9edc3/i/1255054/46944639-b7a5-4eb7-bbed-77da35b722f5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qC1jUgfUVjOREmxGCO6Ay1zpIyo0/yXWWGjOC9CF5Kg="></script>
+    nonce="/xjJbYp2PD9jumd3UE+MO/xMqnDq2gKRhFzeMo3WE+I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -182,7 +182,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      4510
+                                      4513
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -198,7 +198,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      4510
+                                      4513
                                     </div>
                                   </div></a>
                                 </div>
@@ -895,9 +895,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
