--- a/VRChat/19/1274419.html
+++ b/VRChat/19/1274419.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "CRW0rGJ1+ipxuzahqP0x20x8kPDCDAO+CjyUC9I21dM="></script>
+    "lv7jjLTC/7npzsu3gvdD1uAY0acRNMMVr5UKdn2+388="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【#VRoid】レーススカラップコーデセット","description":"ワンピースとスカート、靴下、インナーの衣装テクスチャセットです。\n本品はイラスト集「nikot!2018AW」にて描いているお洋服を\nVR上で実際に着用できるようにデータを起こしたものです。\n着用データをHubに置いてあります。\n\n----------\n21.3.20\n自身のモデルに合わせてブラウスのカラーとワンピース本体の色味をEDITしたものを同封しました。\nお好みに合わせてご着用ください。\n----------\n\n【添付ファイル】\n▼衣装テクスチャ\n・layer_body_onepiece\nレースの透けがセクシーなワンピースです。\nVRoid内のワンピースの型に対応しています。\n・layer_boots\n赤い革のブーツです。ブーツのレイヤーに重ねてお使いください。\n\n▼肌テクスチャ\n・layer_body_inner\nインナーとリブニットの靴下です。足の裏はブーツ用に黒く塗ってあります。\n肌レイヤーに重ねてお使いください。\n\n\n【利用に関して】\n・動画配信時の衣装として着たり、VRChat、cluster、VRoid Hubへの投稿\n 各種VRM対応サービスへのおでかけなど、ご自由にお使いください。\n・この衣装を着たモデルの商用利用は可能です。\n・使用時の報告やクレジットは不要です。\n・ハッシュタグ#unnun をつけたツイートや\n ツイッターアカウント(@moucou)へのリプライをいただけると、今後の励みになります！\n・改変および再配布、販売は禁止しております。\n\n\n関連商品\nnikot!2018AW( https://unnun.booth.pm/items/1152285 )","url":"https://booth.pm/ja/items/1274419","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/2f22ec23-4d27-4849-8531-81e2965bdbb4/i/1274419/9ef4f327-7648-45ce-82e7-8fa19907b864_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CRW0rGJ1+ipxuzahqP0x20x8kPDCDAO+CjyUC9I21dM="></script>
+    nonce="lv7jjLTC/7npzsu3gvdD1uAY0acRNMMVr5UKdn2+388="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -599,9 +599,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
