--- a/VRChat/61/1274361.html
+++ b/VRChat/61/1274361.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mIYNV3x/xG9T191rSvfVlhkVhO+CkJtVI03dx56AKRY="></script>
+    "bw+JnXEevNBwZYX9wZpsPfy4AjLGHYa+FD+VAgOUDTU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボクセルビームライフルパック","description":"[JP]\nMagicaVoxelで製作したビームライフルモデルです。\n3つのライフルが入っています。\nUnityで利用可能なEmission専用テクスチャーも入っています。\nファイル形式は .OBJ です。\n\n[EN]\nBeam Rifle Models made with MagicaVoxel.\nThere are 3 different Rifle Models.\nThere are also Emission Textures for using on Unity.\nFile Format is \".OBJ\".\n\n[KR]\nMagicaVoxel로 제작한 빔 라이플 모델입니다.\n총 3가지의 모델들이 들어 있습니다.\nUnity 상에서의 이용을 위한 이미션 텍스쳐도 동봉되어 있습니다.\n파일 형식은 .OBJ 입니다.","url":"https://booth.pm/ja/items/1274361","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/848234c6-c7ff-4b68-9cb5-1d1c77651f0a/i/1274361/be354e3b-c3c5-419c-813f-f1e934379c07_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mIYNV3x/xG9T191rSvfVlhkVhO+CkJtVI03dx56AKRY="></script>
+    nonce="bw+JnXEevNBwZYX9wZpsPfy4AjLGHYa+FD+VAgOUDTU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -437,9 +437,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
