--- a/VRChat/48/1274348.html
+++ b/VRChat/48/1274348.html
@@ -104,7 +104,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "F+7N5qIgMuswvNc/YIT/5lBsCcJhuriI0RcumtkArgA="></script>
+    "iHu7qqgVQxfaTEBBfI/DgC4cdvVrsSND5oynfgULnck="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"DJK-400","description":"Kesigomu's Arsenal社より発売されたオーソドックスなDJコントローラー。\n圧倒的なコスパと耐久性で瞬く間に普及し、DJ人口の増加も促した傑作。","url":"https://booth.pm/ja/items/1274348","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/3713aef5-42d6-43d4-b456-e2fe144cfcc8/i/1274348/28aee78b-66ac-4448-97ee-5d61d93e7ee7_base_resized.jpg"}
     </script>
@@ -115,7 +115,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="F+7N5qIgMuswvNc/YIT/5lBsCcJhuriI0RcumtkArgA="></script>
+    nonce="iHu7qqgVQxfaTEBBfI/DgC4cdvVrsSND5oynfgULnck="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -429,9 +429,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
