--- a/VRChat/92/1274192.html
+++ b/VRChat/92/1274192.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "NTZHMvyX+zOooXYV8ILG4Ni8Z60Gy85SFgwY4P6QADw="></script>
+    "VoM/YHOrRwgBJBKICwlsUETVuiGmvp0Hyr3xUrDSq0o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ORG_Basterd/ORG_Set","description":"大剣。\nUTS2.0.6以外のシェーダーを設定していないので、導入環境にはご注意ください。\n\n300円のほうは槍と杖が入ってます。\n※画像は5枚目以降を参考\n\n\n※利用規約※\n\n営利利用:可\n【ゲーム, 映像作品, 動画配信等にご利用いただけます】\n\n改変:可\n【モデルを含めた当データの改変は自由です】\n\n再配布:禁止\n【テクスチャ、モデルともに他者への二次配布を禁止します】","url":"https://booth.pm/ja/items/1274192","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"200","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/370bd2d8-e720-4d70-a153-03e2d3872e42/i/1274192/30e4c23d-baa1-422f-9ab1-6be7858f86bc_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NTZHMvyX+zOooXYV8ILG4Ni8Z60Gy85SFgwY4P6QADw="></script>
+    nonce="VoM/YHOrRwgBJBKICwlsUETVuiGmvp0Hyr3xUrDSq0o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -539,9 +539,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
