--- a/VRChat/50/1271250.html
+++ b/VRChat/50/1271250.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "s7kCPIqZTT9v+/pBBkBAfa35YAb9b7LEI8W6y5cEIMo="></script>
+    "3N7DdJ/j2mVAAKJWYlnlRBfr/nmKpbf7zi2JzZ0vNxY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dメガネ","description":"3Dメガネです\n\n最先端の技術をお楽しみください\n\nマテリアルが3つです\n\n元ファイルをそのまま販売することのみ禁止します．\n\n改変その他ご自由にお使いください．\n\n使用により起こった事象について作者は責任を負いません．","url":"https://booth.pm/ja/items/1271250","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/7feb03e9-a642-4ed6-b66d-d6b85ca592af/i/1271250/0a3c964c-ac7a-47f8-b684-e82855915112_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="s7kCPIqZTT9v+/pBBkBAfa35YAb9b7LEI8W6y5cEIMo="></script>
+    nonce="3N7DdJ/j2mVAAKJWYlnlRBfr/nmKpbf7zi2JzZ0vNxY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -354,9 +354,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
